--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Laurel Template</title>
+    <title>QuickBasket</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Playfair+Display:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -18,7 +18,7 @@
                         <h1 class="m-0">
                             <a href="#">
 								<svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-									<title>Laurel</title>
+									<title>QuickBasket</title>
 								    <defs>
 								        <linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="logo-a">
 								            <stop stop-color="#F9425F" stop-opacity=".8" offset="0%"/>
@@ -47,9 +47,9 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
-	                        <div class="hero-cta"><a class="button button-shadow" href="#">Learn more</a><a class="button button-primary button-shadow" href="#">Early access</a></div>
+	                        <h1 class="hero-title mt-0">Everything You Need. All in One PLace.</h1>
+	                        <p class="hero-paragraph">From fashion to electronics - find top-quality products at unbeatable prices.</p>
+	                        <div class="hero-cta"><a class="button button-shadow" href="#">Start Exploring</a><a class="button button-primary button-shadow" href="#">Early access</a></div>
 						</div>
 						<div class="hero-app">
 							<div class="hero-app-illustration">
@@ -101,7 +101,7 @@
 								    </g>
 								</svg>
 							</div>
-							<img class="device-mockup" src="dist/images/iphone-mockup.png" alt="App preview">
+							<img class="device-mockup" src="dist/images/dark.jpg.jpg" alt="App preview">
                             <div class="hero-app-dots hero-app-dots-1">
 								<svg width="124" height="75" xmlns="http://www.w3.org/2000/svg">
 								    <g fill="none" fill-rule="evenodd">
@@ -155,8 +155,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Wide Product Range</h3>
+                                    <p class="text-sm mb-0">Find everything from daily essentials to unique finds - all in one basket.</p>
                                 </div>
                             </div>
 							<div class="feature is-revealing">
@@ -180,8 +180,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Fast & Reliable Delivery</h3>
+                                    <p class="text-sm mb-0">Get your orders delivered lightning-fast, right to your doorstep.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -210,8 +210,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Secure Payments</h3>
+                                    <p class="text-sm mb-0">Shop with confidence using our trusted,encrypted payment system.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -235,8 +235,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Easy Returns</h3>
+                                    <p class="text-sm mb-0">Not happy with a product? Enjoy hassle-free returns within 7 days.</p>
                                 </div>
                             </div>
 							<div class="feature is-revealing">
@@ -261,8 +261,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Real-Time Order Tracking</h3>
+                                    <p class="text-sm mb-0">Know exactly where your order is, every step of the way.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -286,8 +286,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">24/7 Customer Support</h3>
+                                    <p class="text-sm mb-0">Our support team is always ready to help you, any time, any day.</p>
                                 </div>
                             </div>
                         </div>
@@ -299,8 +299,8 @@
                 <div class="container-sm">
                     <div class="media-inner section-inner">
                         <div class="media-header text-center">
-                            <h2 class="section-title mt-0">Meet Laurel</h2>
-                            <p class="section-paragraph mb-0">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <h2 class="section-title mt-0">Meet QuickBasket</h2>
+                            <p class="section-paragraph mb-0">Your one-stop destination for smart shopping. QuickBasket was born from the idea that shopping online should be simple, fast, and fun. We bring handpicked products, unbeatable deals, and smooth delivery - all in one place.</p>
                         </div>
 						<div class="media-canvas">
 							<svg width="800" height="450" viewBox="0 0 800 450" xmlns="http://www.w3.org/2000/svg">
