--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="QuickBasket- Quick Buy. Easy Life. Shop smarter, save time, and enjoy doorstep delivery with just a few clicks, initial-scale=1">
+	<meta name="keywords" content="ECommerce Nepal, QuickBasket, Online shopping Nepal, Buy products online, Fast delivery Nepal, Online grocery Nepal, initial-scale=1">
+	<meta name="author" content="Dipendra Mahato, initial-scale=1">
+	<meta name="robots" content="index, follow, initial-scale=1">
+	<link rel="canonical" href="https://dipendramahato-1.github.io/laurel/">
+	<meta property="og:title" content="QuickBasket">
+	<meta property="og:description" content="QuickBasket- Quick Buy. Easy Life. Shop smarter, save time, and enjoy doorstep delivery with just a few clicks">
+	<meta property="og:url" content="https://dipendramahato-1.github.io/laurel/">
+	<meta property="og:image" content="dist/images/dark.jpg">
+	<meta property="twitter:title" content="QuickBasket">
+	<meta property="twitter:description" content="QuickBasket- Quick Buy. Easy Life. Shop smarter, save time, and enjoy doorstep delivery with just a few clicks">
+	<meta property="twitter:url" content="https://dipendramahato-1.github.io/laurel/">
+	<meta property="twitter:image" content="dist/images/dark.jpg">
+	
     <title>QuickBasket</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Playfair+Display:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
+	<link rel="icon" href="dist/css/icon.png">
+	
+
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
@@ -47,7 +64,7 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Everything You Need. All in One PLace.</h1>
+	                        <h1 class="hero-title mt-0">Everything You Need. All in One PLace- QuickBasket</h1>
 	                        <p class="hero-paragraph">From fashion to electronics - find top-quality products at unbeatable prices.</p>
 	                        <div class="hero-cta"><a class="button button-shadow" href="#">Start Exploring</a><a class="button button-primary button-shadow" href="#">Early access</a></div>
 						</div>
